build_test_2.log
ninja: Entering directory `build_conan/build/Release'
[0/1] Re-running CMake...
-- Using Conan toolchain: /app/build_conan/build/Release/generators/conan_toolchain.cmake
-- Conan toolchain: Defining architecture flag: -m64
-- Conan toolchain: C++ Standard 17 with extensions ON
-- Warning: Standard CMAKE_CXX_STANDARD value defined in conan_toolchain.cmake to 17 has been modified to 20 by /app/CMakeLists.txt
-- Conan: Target declared 'glad::glad'
-- Conan: Target declared 'tomlplusplus::tomlplusplus'
-- nanovg not found via package manager, using ext/nanovg...
-- Configuring done (0.6s)
-- Generating done (0.0s)
-- Build files have been written to: /app/build_conan/build/Release
[1/2] Building CXX object CMakeFiles/test_game_sprite_refactor.dir/source/test_app_stub.cpp.o
FAILED: CMakeFiles/test_game_sprite_refactor.dir/source/test_app_stub.cpp.o
/usr/bin/c++ -DBOOST_ATOMIC_DYN_LINK -DBOOST_ATOMIC_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DBOOST_THREAD_DYN_LINK -DBOOST_THREAD_NO_LIB -DFMT_SHARED -DNANOVG_GL3 -DSPDLOG_COMPILED_LIB -DSPDLOG_FMT_EXTERNAL -DSPDLOG_SHARED_LIB -DUNICODE="" -DWXUSINGDLL -DWXWIN_COMPATIBILITY_3_3 -D_FILE_OFFSET_BITS=64 -D_UNICODE="" -D__WXGTK__ -I/app/source -I/app/ext/nanovg/src -isystem /usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.2 -isystem /usr/include/wx-3.2 -isystem /home/jules/.conan2/p/b/glad434481e345f8d/p/include -isystem /home/jules/.conan2/p/tomlpf6611d18152aa/p/include -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Wno-deprecated-declarations -Wno-overloaded-virtual -Wno-strict-aliasing -Wno-sign-compare -Wno-unused-function -Wunused-result -pthread -O3 -DNDEBUG -std=gnu++20 -pthread -MD -MT CMakeFiles/test_game_sprite_refactor.dir/source/test_app_stub.cpp.o -MF CMakeFiles/test_game_sprite_refactor.dir/source/test_app_stub.cpp.o.d -o CMakeFiles/test_game_sprite_refactor.dir/source/test_app_stub.cpp.o -c /app/source/test_app_stub.cpp
/app/source/test_app_stub.cpp: In member function ‘virtual void Application::MacOpenFiles(const wxArrayString&)’:
/app/source/test_app_stub.cpp:15:73: error: ‘MacOpenFiles’ is not a member of ‘wxApp’
   15 | void Application::MacOpenFiles(const wxArrayString& fileNames) { wxApp::MacOpenFiles(fileNames); }
      |                                                                         ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
